# physics3

./: .gitignore  CMakeLists.txt  README.md  another.c  main.c
include/: gravitating_body.h  orbiting_body.h
src/: gravitating_body.c  main.c  orbiting_body.c
